# biodiversidade

./: .gitignore  README.md  ROADMAP.md  docker-compose.yml  docker-composer.yml  init-project.sh  pyproject.toml  requirements.txt  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
app/: visualizacao.py
assets/: setup_aws_cli.md
dbt_project/: .user.yml  dbt_project.yml
dbt_project/models/mart/: gold_biodiversity_trends.sql  schema.yml
dbt_project/models/staging/: schema.yml  sources.yml  stg_gbif_apidae.sql
docker/: init-project.sh
docs/: docs.md
init-aws/: init-s3.sh
scripts/: extract_gbif.py  logger.py  s3_manager.py
