[project]
name = "biodiversidade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.39",
    "dbt-duckdb>=1.10.0",
    "fastparquet>=2025.12.0",
    "inputimeout>=1.0.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
